# precompress

./: Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  release.yml
src/: encode.rs  main.rs  precompress.rs
