[package]
name = "precompress"
version = "0.5.0"
description = "Precompress a directory of assets"
authors = ["Ryan Fowler <ryan.fowler19@gmail.com>"]
repository = "https://github.com/ryanfowler/precompress"
categories = ["command-line-utilities"]
keywords = ["compress", "brotli", "deflate", "gzip", "zstd"]
license = "MIT"
edition = "2024"

[[bin]]
name = "precompress"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
strip = true

[dependencies]
anyhow = { version = "1.0.101" }
brotli = { version = "8.0.2" }
clap = { version = "4.5.59", features = ["derive"] }
crossbeam = { version = "0.8.4" }
flate2 = { version = "1.1.9" }
ignore = { version = "0.4.25" }
mimalloc = { version = "0.1.48" }
phf = { version = "0.13.1", features = ["macros"] }
strum = { version = "0.27.2" }
strum_macros = { version = "0.27.2" }
zstd = { version = "0.13.3" }
